kubernetes/webservice/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webservice
  labels:
    app: webservice
    type: webservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webservice
      type: webservice
  template:
    metadata:
      labels:
        app: webservice
        type: webservice
    spec:
      containers:
      - name: webservice
        image: 192.168.178.43:32550/webservice:1.8.5
        imagePullPolicy: "IfNotPresent"
        ports:
          - containerPort: 5090
        livenessProbe:
          httpGet:
            path: /api/_health
            port: 5090
          initialDelaySeconds: 10
          periodSeconds: 30
        resources:
          requests:
            memory: "200Mi"
            cpu: "250m"
          limits:
            memory: "400Mi"
            cpu: "500m"
