kubernetes/webservice/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: webservice-clusterip
spec:
  selector:
    app: webservice
  ports:
    - protocol: TCP
      port: 5090
      targetPort: 5090

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webservice-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: "luha.server"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webservice-clusterip
            port:
              number: 5090
